# Agentic-Job-Apply

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  _check_logs.py  _debug_match.py  check_syntax.py  docker-compose.yml  pyproject.toml  start.py  test_browser_email.py  test_e2e_flow.py  test_endpoints.py
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/job_agent_cli/: __init__.py  main.py
config/: job_sources.yaml
data/: profile.json
data/vectordb/: chroma.sqlite3
tests/: conftest.py  fixtures.py  test_contracts.py  test_e2e_pipeline.py  test_e2e_server.py  test_events.py  test_models.py  test_registry.py  test_source_loader.py  test_tracing.py
tests/integration/: test_pipeline.py
