[project]
name = "job-apply-agent"
version = "0.4.0"
description = "Agentic AI personal job application agent with RAG, MCP, and A2A protocols"
requires-python = ">=3.11"
dependencies = [
    "job-agent-contracts",
    "job-agent-services",
    "job-agent-agents",
    "job-agent-server",
    "job-agent-dashboard",
    "job-agent-cli",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[tool.uv.workspace]
members = [
    "packages/contracts",
    "packages/services",
    "packages/agents",
    "packages/server",
    "packages/dashboard",
    "cli",
]

[tool.uv.sources]
job-agent-contracts = { workspace = true }
job-agent-services = { workspace = true }
job-agent-agents = { workspace = true }
job-agent-server = { workspace = true }
job-agent-dashboard = { workspace = true }
job-agent-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
