[project]
name = "job-agent-cli"
version = "0.3.0"
description = "CLI entry point for the job-apply-agent system"
requires-python = ">=3.11"
dependencies = [
    "job-agent-contracts",
    "job-agent-services",
    "job-agent-agents",
    "job-agent-server",
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
job-agent = "job_agent_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_agent_cli"]
